--- a/libs/features/login/src/lib/login.component.html
+++ b/libs/features/login/src/lib/login.component.html
@@ -29,7 +29,7 @@
                         </div>
                         <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Quên mật khẩu ?</a>
                     </div>
-                    <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
+                    <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-700  focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Đăng nhập</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                         Chưa có mật khẩu <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Tạo tài khoản</a>
                     </p>
