Bổ sung form Đăng ký

--- a/libs/features/login/src/lib/login.component.html
+++ b/libs/features/login/src/lib/login.component.html
@@ -1,14 +1,14 @@
-<div class="login-wrap dark:bg-gray-900">
+<ng-container *ngIf="isRegister; else tmpLogin">
+    <project-angular-register (back)="backToLogin($event)"></project-angular-register>
+</ng-container>
+<ng-template #tmpLogin>
+    <div class="login-wrap dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-            <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
+        <h2 class="text-[60px] flex items-center mb-6 font-semibold text-gray-900 dark:text-white">
            Đăng nhập
-        </a>
+        </h2>
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                    Đăng nhập tài khoản 
-                </h1>
                 <form class="space-y-4 md:space-y-6" action="#">
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
@@ -31,10 +31,13 @@
                     </div>
                     <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-700  focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Đăng nhập</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                        Chưa có mật khẩu <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Tạo tài khoản</a>
+                        Chưa có tài khoản 
+                        <a (click)="signIn()" class="cursor-pointer font-medium text-[#1894ff] hover:underline">Tạo tài khoản</a>
                     </p>
+                    
                 </form>
             </div>
         </div>
     </div>
 </div>
+</ng-template>
