--- a/libs/features/login/src/lib/login.component.html
+++ b/libs/features/login/src/lib/login.component.html
@@ -4,7 +4,7 @@
 <ng-template #tmpLogin>
     <div class="login-wrap dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <h2 class="text-[60px] flex items-center mb-6 font-semibold text-gray-900 dark:text-white">
+        <h2 class="text-[27px] flex items-center mb-6 font-bold text-gray-900 dark:text-white">
            Đăng nhập
         </h2>
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
